--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "assert": "^1.4.1",
     "express": "^4.16.3",
     "mongodb": "^3.1.1",
+    "nodemailer": "^4.6.8",
     "pug": "^2.0.3"
   },
   "devDependencies": {
