--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "mocha": "^5.2.0",
-    "node-sass": "^4.9.3"
+    "node-sass": "^4.9.3",
+    "supertest": "^3.1.0"
   }
 }
