--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "assert": "^1.4.1",
     "express": "^4.16.3",
+    "jquery-validation": "^1.18.0",
     "mongodb": "^3.1.1",
     "node-schedule": "^1.3.0",
     "nodemailer": "^4.6.8",
