--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "node index.js",
+    "start": "temp.html",
     "sass:compile": "node-sass --include-path sass --watch INPUT_FILE.scss OUTPUT_FILE.css"
   },
   "keywords": [],
