--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "assert": "^1.4.1",
+    "cool-ascii-faces": "^1.3.4",
     "express": "^4.16.3",
     "jquery-validation": "^1.18.0",
     "mongodb": "^3.1.1",
